# GroupDesign

./: .gitignore  LICENSE  README.md  pyproject.toml
groupdesign/: __init__.py  best_of_greedy.py  cli.py  interval_sectioning.py  utils.py
groupdesign/tests/: test_best_of_greedy.py  test_interval_sectioning.py
