[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groupdesign"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
]
description = "A package for generating greedy block designs"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Felix"}
]

[project.scripts]
groupdesign = "groupdesign.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["groupdesign*"]
